feature: ajuste index

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Ong ser amor</title>
+  <title>ONG Ser Amor - Transformando vidas através da educação</title>
+  <meta name="description" content="A ONG Ser Amor oferece reforço escolar, informática, esporte e apoio psicológico para crianças e adolescentes." />
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="logo.png">
