feat: ajuste index

--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,26 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
   <meta charset="utf-8">
-  <title>ONG Ser Amor - Transformando vidas através da educação</title>
-  <meta name="description" content="A ONG Ser Amor oferece reforço escolar, informática, esporte e apoio psicológico para crianças e adolescentes." />
+
+  <title>ONG Ser Amor | Reforço Escolar, Esporte e Apoio Psicológico</title>
+
+  <meta name="description" content="A ONG Ser Amor transforma vidas através da educação, oferecendo reforço escolar, informática, esporte e apoio psicológico para crianças e adolescentes." />
+
+  <meta name="keywords" content="ONG Ser Amor, ONG em Itapevi, reforço escolar, projeto social, apoio psicológico, esporte para crianças" />
+
+  <meta name="author" content="ONG Ser Amor" />
+
+  <meta property="og:title" content="ONG Ser Amor - Transformando vidas através da educação" />
+  <meta property="og:description" content="Reforço escolar, informática, esporte e apoio psicológico para crianças e adolescentes." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://ongseramor.org" />
+  <meta property="og:image" content="https://ongseramor.org/logo.png" />
+
+  <meta name="robots" content="index, follow" />
+
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <link rel="icon" type="image/x-icon" href="logo.png">
 </head>
-<body>
-  <app-root></app-root>
-</body>
-</html>
